# FileCompressor

./: CMakeLists.txt  DEBUG_GUIDE.md  HUFFMAN_DEBUG_GUIDE.md  README.md  com  compress.txt  debug_helpers.cpp  dec  decompress.cpp  huffman_debug_helpers.cpp  legend.txt  main.cpp
include/: Decompressor.h  Huffman.h
simpleCompressor/: compressor.cpp  decompress.txt
src/: Decompressor.cpp  Huffman.cpp
